/**
Copyright 2019 BarD Software s.r.o

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

import "com/bardsoftware/papeeria/backend/file-backend.proto";

package com.bardsoftware.papeeria.backend.demo;
option java_outer_classname = "HashProto";

service HashCalculator {
    rpc Calculate(HashRequest) returns (HashResponse) {}
}

message HashRequest {
    string requestId = 1;
    string taskId = 2;
    FileRequestDto fileRequest = 3;
}

message HashResponse {
    string requestId = 1;
    string hash = 2;
}
