/**
Copyright 2019 BarD Software s.r.o

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package com.bardsoftware.papeeria.backend;
option java_outer_classname = "FileProcessingBackendProto";

message FileDto {
    string id = 1;
    string name = 2;
    bytes contents = 3;
}

message FileRequestDto {

    repeated FileDto file = 1;
    string content_hash_record_key = 2;
    int32 disk_quota_mb = 3;
}
